<resources>
    <string name="app_name">BloggieDev</string>

    <!--AUTH FIREBASE-->
    <!--Google API server client ID-->
    <string name="server_client_id">397841004949-bn5ac3oaai5q4e8egr5igpt27om56lsm.apps.googleusercontent.com</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>


    <string name="sign_in_canceled">sign in canceled</string>
    <string name="no_internet_connection">check internet connection</string>
    <string name="unknown_error">error</string>
    <string name="ok">OK</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="img_profile_pic">image profile pic</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu navigation srings-->
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_new_post">New post</string>
    <string name="title_notification">Notifications</string>
    <string name="title_profile">Profile</string>


    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="sign_out_question">Are you sure to sign out?</string>
    <string name="warning">Warning</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="get_started">Get Started!</string>
    <string name="my_page">My Page</string>
    <string name="settings">Settings</string>
    <string name="share">share</string>
    <string name="post_image_description">post image</string>
    <string name="littlepoints">littlepoints</string>
    <string name="title_activity_create_post">New post</string>
    <string name="title_text">Text</string>
    <string name="title_image">Image</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_publish">Publish</string>
    <string name="instructions_create_post">Tap buttons below to add content</string>
    <string name="edit_title">Edit title</string>
    <string name="type_title">Type a title for your post</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="type_content">Type content</string>
    <string name="comments">Comments</string>
    <string name="description_zoom_touch_close">zoom_touch_close</string>
    <string name="title_activity_detail_post">Post detail</string>
    <string name="undo">UNDO</string>
    <string name="removed_from_content">Removed from content!</string>
    <string name="views">Views</string>
    <string name="type_a_comment">Type a comment...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EXTRA_POST">post</string>
    <string name="replyTo">Reply to</string>
    <string name="reply">Reply</string>
</resources>
