<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_search" />

    <item
        android:id="@+id/createPostFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_create_post" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/title_profile" />
</menu>