<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_page"
            android:icon="@drawable/ic_home"
            android:title="@string/my_page" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_home"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_home"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
