<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <activity
        android:id="@+id/loginActivity"
        android:name="es.chewiegames.bloggie.ui.login.LoginActivity"
        android:label="Login"
        tools:layout="@layout/activity_login" />

    <activity
        android:id="@+id/mainActivity"
        android:name="es.chewiegames.bloggie.ui.main.MainActivity"
        android:label="Main"
        tools:layout="@layout/activity_main" />

    <activity
        android:id="@+id/newPostActivity"
        android:name="es.chewiegames.bloggie.ui.newPost.NewPostActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_new_post" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="es.chewiegames.bloggie.ui.ui.home.HomeFragment"
        android:label="@string/title_home" >
        <action
            android:id="@+id/action_to_new_post"
            app:destination="@id/newPostActivity"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_out_left"
            app:launchSingleTop="false"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_home_to_detail_post"
            app:destination="@id/detailPostActivity" />
        <action
            android:id="@+id/action_home_to_comments"
            app:destination="@id/commentsActivity"
            app:enterAnim="@animator/slide_up"
            app:exitAnim="@animator/slide_down"
            />
    </fragment>
    <activity
        android:id="@+id/detailPostActivity"
        android:name="es.chewiegames.bloggie.ui.detailPost.DetailPostActivity"
        android:label="@string/title_activity_create_post"
        tools:layout="@layout/activity_detail_post" />
    <activity
        android:id="@+id/commentsActivity"
        android:name="es.chewiegames.bloggie.ui.comments.CommentsActivity"
        android:label="@string/comments"
        tools:layout="@layout/activity_comments" />

</navigation>