<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:layout_margin="@dimen/card_margin"
        android:onClick="@{(v) -> homeViewModel.onPostClicked(feedPost, (feedPost.titleImage!=null) ? postImage : null, postTitle)}"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/post_cover_height">

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_cover_height"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/post_image_description"
                android:scaleType="fitXY"
                android:transitionName="@{feedPost.id}"
                android:visibility="visible"
                app:feedPostTitleImage="@{feedPost.titleImage}"
                app:logoNoImage="@{logoNoImage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePostImageView"
                app:progressBarImage="@{imageViewProgressBar}"
                 />

            <ImageView
                android:id="@+id/logoNoImage"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/post_cover_height"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePostImageView"
                app:layout_constraintBottom_toTopOf="@id/postTitle"/>

            <ImageView
                android:id="@+id/profilePostImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:padding="@dimen/post_avatar_padding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:profileImage="@{user.avatar}"
                app:srcCompat="@mipmap/ic_launcher_round"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/profilePostImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Chewie games"
                app:layout_constraintBottom_toTopOf="@id/postImage"
                android:text="@{user.userName}"
                style="@style/title"/>


            <CheckBox
                android:id="@+id/littlePoint"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:button="@drawable/fill_in_heart"
                android:checked="@{homeViewModel.isLikedPost(feedPost)}"
                android:padding="@dimen/card_padding"
                app:layout_constraintBottom_toBottomOf="@+id/comments"
                app:layout_constraintEnd_toStartOf="@+id/comments"
                app:layout_constraintTop_toTopOf="@id/postImage"
                app:onLittlePointChecked="@{homeViewModel}"
                app:position="@{adapterPosition}" />

            <ImageView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:onClick="@{(v) -> homeViewModel.onAddCommentClicked(homeViewModel.posts[adapterPosition])}"
                android:padding="@dimen/card_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/postImage"
                app:srcCompat="@drawable/ic_comment" />


            <ProgressBar
                android:id="@+id/imageViewProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/postImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePostImageView"
                app:layout_constraintBottom_toTopOf="@id/postTitle"/>
            <!--android:layout_height="@dimen/post_cover_height"-->

            <TextView
                android:id="@+id/postTitle"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@{feedPost.title}"
                android:textAllCaps="true"
                android:transitionName="@{feedPost.title}"
                app:layout_constraintBottom_toTopOf="@+id/littlePointCount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postImage"
                tools:text="Aventura con mi Halcón Milenario" />

            <TextView
                android:id="@+id/littlePointCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@{String.valueOf(feedPost.littlePoints)}"
                android:textColor="@color/primaryText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postTitle"
                tools:text="999" />

            <TextView
                android:id="@+id/littlePointText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_padding"
                android:text="@string/littlepoints"
                android:textColor="@color/primaryText"
                app:layout_constraintStart_toEndOf="@id/littlePointCount"
                app:layout_constraintTop_toTopOf="@+id/littlePointCount" />

            <TextView
                android:id="@+id/commentsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:padding="@dimen/card_padding"
                android:text="@{String.valueOf(feedPost.comments.size)}"
                android:textColor="@color/primaryText"
                app:layout_constraintStart_toEndOf="@id/littlePointText"
                app:layout_constraintTop_toTopOf="@+id/littlePointText"
                tools:text="999" />

            <TextView
                android:id="@+id/commentsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:padding="@dimen/card_padding"
                android:text="@string/comments"
                android:textColor="@color/primaryText"
                app:layout_constraintTop_toBottomOf="@+id/postTitle"
                app:layout_constraintStart_toEndOf="@id/commentsCount"/>

            <TextView
                android:id="@+id/viewsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:padding="@dimen/card_padding"
                android:text="@{String.valueOf(feedPost.views)}"
                android:textColor="@color/primaryText"
                app:layout_constraintTop_toBottomOf="@+id/postTitle"
                app:layout_constraintStart_toEndOf="@+id/commentsText"
                tools:text="999" />

            <TextView
                android:id="@+id/viewsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:padding="@dimen/card_padding"
                android:text="@string/views"
                android:textColor="@color/primaryText"
                app:layout_constraintTop_toBottomOf="@+id/postTitle"
                app:layout_constraintStart_toEndOf="@id/viewsCount"/>

            <TextView
                android:id="@+id/timeAgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/card_padding"
                android:textColor="@color/primaryText"
                android:textSize="11sp"
                app:layout_constraintTop_toBottomOf="@+id/postTitle"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="10m" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <data>

        <variable
            name="adapterPosition"
            type="Integer" />

        <variable
            name="user"
            type="es.chewiegames.domain.model.User" />

        <variable
            name="feedPost"
            type="es.chewiegames.domain.model.Post" />

        <variable
            name="homeViewModel"
            type="es.chewiegames.bloggie.viewmodel.HomeViewModel" />
    </data>

</layout>
